v0.2 build 3 - Now flexit provide SASS format and convert it as CSS file - Defined $flexbox and $item as the flexbox and its item selector - Fixed nested flexbox will cause incorrect width - Fixed nested flexbox item's margin will impact the position - Fixed vertical popo and shift logic - Added shorten properties combination - Fixed incorrect gutters spacing within a gutter flexbox - Added extra size unit for gutters - Added different size (s, l, xl and xxl) for gutters - Fixed incorrect width in every RWD breakpoint

--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -133,8 +133,7 @@
 /* Common Standarlize */
 body, html {
   height: 100%;
-
-  margin: 1em;
+  margin: 0;
   padding: 0;
 }
 body, table, p, div, span, form, input, textarea, select, pre, button, h1, h2, h3, h4, h5, h6 {
@@ -162,23 +161,40 @@ input, textarea, select {
 h1 {
   color: hsl(192, 19%, 44%);
 }
-[class*='col'] {
+#content {
+  padding: 1rem;
+}
+[class*='item'] {
   text-align: center;
   color: hsl(192, 19%, 36%);
 }
-[class*='col'] > b {
+[class*='item'] > b {
   display: block;
   background: hsl(192, 19%, 95%);
   padding: 1rem;
   font-weight: normal;
   font-size: 10px;
+  height: 100%;
 }
-.container > div {
+[class*='item'] > b:before {
+  display: inline-block;
+  content: '';
+  height: 100%;
+  vertical-align: middle;
+}
+
+.container {
   height: 200px;
-}
-.container > div {
+  background: hsl(192, 19%, 98%);
   margin-bottom: 1rem;
 }
+.container > div {
+  height: 100%;
+}
+
 .container [class*='col'] > b {
   background: hsl(192, 19%, 75%);
+}
+.vertical {
+  height: 400px;
 }
